# advent_of_code_2024

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go
.github/workflows/: base_ci.yml
bzl_tools/: README.md  tools.go
bzl_tools/go_fix/: BUILD.bazel  fix.sh
bzl_tools/go_verify/: BUILD.bazel  README.md  gofmt.sh  main.go
bzl_tools/images/: defs.bzl
bzl_tools/protofmt/: BUILD.bazel  protofmt.bzl
bzl_tools/protogen_go_link/: BUILD.bazel  README.md  golink.bzl  main.go
ci_img/: BUILD.bazel  entrypoint.sh
internal/cmd/: BUILD.bazel  day.go  day1.go  day2.go  day3.go  main.go
internal/day1/: BUILD.bazel  day1.go  day1_test.go
internal/day2/: BUILD.bazel  day2.go  day2_test.go
internal/day3/: BUILD.bazel  day3.go  day3_test.go
internal/day4/: BUILD.bazel  day4.go  day4_test.go
internal/day5/: BUILD.bazel  day5.go  day5_test.go
internal/day6/: BUILD.bazel  day6.go  day6_test.go
internal/day7/: BUILD.bazel  day7.go  day7_test.go
internal/day8/: BUILD.bazel  day8.go  day8_test.go
internal/day9/: BUILD.bazel  day9.go  day9_test.go
proto/advent_of_code/v1/: BUILD.bazel  advent_of_code.proto
services/advent_of_code/: BUILD.bazel  main.go
services/advent_of_code/internal/rpcsrv/: BUILD.bazel  rpcsrv.go
