load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "protogen_go_link",
    srcs = ["main.go"],
    importpath = "github.com/westford14/advent_of_code_2024/bzl_tools/protogen_go_link",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

sh_test(
    name = "go_fmt_verify",
    size = "small",
    srcs = ["//bzl_tools/go_verify:gofmt.sh"],
    data = [
        "main.go",
        "@go_sdk//:files",
        "@go_sdk//:tools",
        "@org_golang_x_tools//cmd/goimports",
    ],
)

exports_files(
    ["copy_into_workspace.sh"],
    visibility = ["//visibility:public"],
)
