load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "day1.go",
        "day2.go",
        "day3.go",
        "main.go",
    ],
    importpath = "github.com/westford14/advent2024/internal/cmd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/day1",
        "//internal/day2",
        "//internal/day3",
        "@com_github_spf13_cobra//:cobra",
    ],
)
