load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "day.go",
        "main.go",
    ],
    importpath = "github.com/westford14/advent_of_code_2024/internal/cmd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/day1",
        "//internal/day2",
        "//internal/day3",
        "//internal/day4",
        "//internal/day5",
        "//internal/day6",
        "//internal/day7",
        "//internal/day8",
        "@com_github_spf13_cobra//:cobra",
    ],
)
