load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day2",
    srcs = ["day2.go"],
    importpath = "github.com/westford14/advent2024/internal/day2",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "day2_test",
    srcs = ["day2_test.go"],
    data = glob([
        "data/**",
    ]),
    embed = [":day2"],
)
