load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day4",
    srcs = ["day4.go"],
    importpath = "github.com/westford14/advent2024/internal/day4",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "day4_test",
    srcs = ["day4_test.go"],
    data = glob([
        "data/**",
    ]),
    embed = [":day4"],
)
