load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day5",
    srcs = ["day5.go"],
    importpath = "github.com/westford14/advent2024/internal/day5",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "day5_test",
    srcs = ["day5_test.go"],
    data = glob([
        "data/**",
    ]),
    embed = [":day5"],
)
