load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day6",
    srcs = ["day6.go"],
    importpath = "github.com/westford14/advent2024/internal/day6",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "day6_test",
    srcs = ["day6_test.go"],
    data = glob([
        "data/**",
    ]),
    embed = [":day6"],
)
