load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day7",
    srcs = ["day7.go"],
    importpath = "github.com/westford14/advent2024/internal/day7",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_mowshon_iterium//:iterium"],
)

go_test(
    name = "day7_test",
    srcs = ["day7_test.go"],
    data = glob([
        "data/**",
    ]),
    embed = [":day7"],
)
