load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day8",
    srcs = ["day8.go"],
    importpath = "github.com/westford14/advent2024/internal/day8",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "day8_test",
    srcs = ["day8_test.go"],
    data = glob([
        "data/**",
    ]),
    embed = [":day8"],
)
